# java2c

./: .gitignore  .gitmodules  LICENSE  README.md  build  git-pull-hook
build-system/: build
build-system/config/paths.d/: Homebrew.path
build-system/functions/: build.functions  main.functions  program.functions  temporaryFiles.functions
build-system/functions/core/: commandLine.functions  core.functions  execute.functions  program.functions  temporaryFiles.functions  trap.functions
build-system/functions/core/dependency/: check.bash.functions  check.functions  dependency.functions
build-system/functions/cpucount/: cpucount.functions
build-system/functions/dependency/: check.sh.functions  dependency.functions
build-system/functions/dependency/check/: Homebrew.functions  RedHat.functions
build-system/lib/: build.functions
build-system/lib/core/: commandLine.functions  compatibility.functions  compatiblity.init-functions  configuration.functions  core.functions  core.init-functions  program.functions  temporaryFiles.functions  trap.functions
build-system/lib/core/dependency/: check.functions  dependency.functions
build-system/lib/cpucount/: cpucount.functions
compilerUser/: java2c.ipr
source/: java2c.ipr
source/c/: CMakeLists.txt  TutorialConfig.h.in  build  com.stormmq.java2c.samples3.Converter.h  java2c.h  java_lang_Class.h  java_lang_Class.typedef.h  java_lang_Object.c  java_lang_Object.h  java_lang_Object.typedef.h  java_lang_String.h  java_lang_String.typedef.h  main.cpp
source/samples/: package-info.java
(+673 files in other folders)
